--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~18.1",
     "@angular/platform-browser-dynamic": "~18.1",
     "@angular/router": "~18.1",
+    "@picocss/pico": "^2.0.6",
     "rxjs": "~7.8",
     "tslib": "~2.3",
     "zone.js": "~0.14"
