--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -2,7 +2,7 @@ services:
     mailpit:
         image: axllent/mailpit
         ports:
-            - ${MAILDEV_PORT}:8025
+            - ${MAILPIT_PORT}:8025
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
