fetch categories from db

--- a/.env.dist
+++ b/.env.dist
@@ -14,7 +14,7 @@ MYSQL_PASSWORD=
 PHP_VERSION=8.3
 
 APP_PORT=80
-MAILDEV_PORT=1080
+MAILPIT_PORT=1080
 PMA_PORT=8080
 ES_PORT=9200
 XDEBUG_FILE_LINK_FORMAT=phpstorm://open?file=%f&line=%l&/symfony/>
